Updated: Added missed composer dependency.

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "require": {
         "symfony/config" : "2.2.*",
         "symfony/dependency-injection" : "2.2.*",
+        "symfony/console": "2.2.*",
         "pda/pheanstalk": "2.1.*"
     },
     "require-dev": {
