--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "symfony/config" : "2.2.*",
         "symfony/dependency-injection" : "2.2.*",
         "symfony/console": "2.2.*",
-        "pda/pheanstalk": "2.1.*"
+        "pda/pheanstalk": "2.1.*",
+        "qafoo/ser-pretty": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "3.7.*@stable"
