Fixed: Composer project name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "Qafoo/PheanstalkCli",
+    "name": "qafoo/pheanstalk-cli",
     "minimum-stability": "stable",
     "version": "1.0.0-alpha",
 
