--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,12 @@
     "version": "1.0.0-alpha",
 
     "require": {
-        "symfony/config" : "2.2.*",
-        "symfony/dependency-injection" : "2.2.*",
-        "symfony/console": "2.2.*",
+        "symfony/console": "~2.3",
         "pda/pheanstalk": "2.1.*",
         "qafoo/ser-pretty": "dev-master"
     },
     "require-dev": {
-        "phpunit/phpunit": "3.7.*@stable"
+        "phpunit/phpunit": "3.7.*"
     },
 
     "autoload": {
